--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
+### datasets ###
+*.h5
+
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
 #
