--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@
 ### other ###
 logs/*
 output/*
+dataset-orig
 *.pyc
+*.sh
 
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
